Add unscaled converter from GBRP > 8bit to RGBx48/64.

Fixes ticket #2633.

Tested-by: Michael Cinquin